# Sokoban-Agent

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  index.txt  ourMap.txt
.devcontainer/: devcontainer.json
docker/: Dockerfile  Dockerfile.cuda
docs/: uml.drawio
exec/: CMakeLists.txt  agent.cpp  agent1.cpp  collector.cpp  extract.cpp  manager.cpp  organizer.cpp  solver.cpp  trainer.cpp  trainer1.cpp
include/: HttpClient.hpp  PolicyOptimize.hpp  Solver.hpp  State.hpp  Trainer.hpp  Visualizer.hpp  defines.hpp
include/MarklovSolver/: Action.hpp  MarklovSolver.hpp  PolicyVisualizer.hpp  State.hpp
lib/: CMakeLists.txt  HttpClient.cpp  PolicyOptimize.cpp  Solver.cpp  State.cpp  Trainer.cpp  Visualizer.cpp  defines.cpp
lib/MarklovSolver/: MarklovSolver.cpp  PolicyVisualizer.cpp  State.cpp
scripts/: batch_extract.sh  batch_solver.sh
