add_executable(solver
    solver.cpp
)
target_link_libraries(solver
    sokoban-agent
    ${TORCH_LIBRARIES}
)

add_executable(agent
    agent.cpp
)
target_link_libraries(agent
    sokoban-agent
    ${TORCH_LIBRARIES}
)
add_executable(extract
    extract.cpp
)
add_executable(trainer
    trainer.cpp
)
target_link_libraries(trainer
    sokoban-agent
    ${TORCH_LIBRARIES}
)

add_executable(collector
    collector.cpp
)
target_link_libraries(trainer1
    sokoban-agent
)